# advgame

./: .gitignore  CONTRIBUTING.md  README.md  install_env.sh
configs/experimental/: grpo_game_pairwise_llama3_1_8b_abliterated_llama3_1_8b_llama3_3_70b_abliterated.yaml  grpo_game_pairwise_qwen25_7b_qwen25_7b_qwen25_32b.yaml  grpo_game_pointwise_qwen25_7b_qwen25_7b_qwen25_32b.yaml  online_dpo_game_pairwise_llama3_1_8b_abliterated_llama3_1_8b_llama3_3_70b_abliterated.yaml  online_dpo_game_pairwise_qwen25_7b_qwen25_7b_qwen25_32b.yaml  online_dpo_game_pairwise_qwen3_4b_2507_abliterated_qwen3_4b_2507_qwen25_32b.yaml  online_dpo_game_pointwise_qwen25_7b_qwen25_7b_qwen25_32b.yaml
configs/paper/llama31/: paper_llama31_dpo_pairwise_offpolicy.yaml  paper_llama31_grpo_pointwise_onpolicy.yaml  paper_llama31_ipo_pairwise_offpolicy.yaml
configs/paper/qwen25/: paper_qwen25_dpo_pairwise_offpolicy.yaml  paper_qwen25_grpo_pointwise_onpolicy.yaml  paper_qwen25_ipo_pairwise_offpolicy.yaml
configs/test/: grpo_game_pairwise_llama3_2_1b_test.yaml  grpo_game_pairwise_qwen25_3b_test.yaml  online_dpo_game_pairwise_llama3_2_1b_test.yaml  online_dpo_game_pairwise_qwen25_3b_test.yaml  online_dpo_game_pairwise_qwen3_4b_2507_test.yaml
eval/: README.md  extract_scores.py  launch_all_evals.sh  prepare_and_launch_all_evals.sh  requirements.txt  run_arena_eval.py  run_lm_eval.py  utils.py
eval/data/: openai_configs.yaml
eval/llama_lm_eval_config/: meta_instruct.yaml
fairseq2/: pyproject.toml
fairseq2/src/fairseq2/assets/cards/models/: llama.yaml  qwen.yaml
fairseq2/src/fairseq2/checkpoint/: _manager.py
fairseq2/src/fairseq2/cli/: _setup.py
fairseq2/src/fairseq2/recipes/: _evaluator.py  _generator.py  _trainer.py  _validator.py  config.py  metrics.py
fairseq2/src/fairseq2/recipes/common/: __init__.py  _optim.py  _ref_model.py  _trainer.py
fairseq2/src/fairseq2/recipes/lm/: __init__.py
fairseq2/src/fairseq2/recipes/lm/_online_finetune/: _common.py  _generative_judge.py  _grpo.py  _grpo_game.py  _online_dpo.py  _online_dpo_game.py  _recipe.py  _remote_model.py  _rewards.py  _templates_format.py  _templates_task.py  sync_model_test.ipynb  test_list_utils.ipynb
fairseq2/src/fairseq2/recipes/lm/_preference_finetune/: _common.py
fairseq2/src/fairseq2/setup/: _po_finetune_units.py  _recipes.py
fairseq2/src/fairseq2/utils/: list.py
scripts/: check_ray.py  download_llama3_models.sh  download_qwen_models.sh  parallel_rsync_copy.sh  start_training_wray.sh  start_training_wray_ray_multinode.sh
scripts/data_and_model_processing/: alpaca_data_processing.py  download_hf_models.py  wildbreak_data_processing_adversarial.py  wildbreak_data_processing_vanilla.py
(+39 files in other folders)
